[project]
name = "dxm-link-builder"
version = "0.1.0"
description = "链接转店小秘成品表格自动化系统"
requires-python = ">=3.10"
dependencies = [
  "openpyxl>=3.1.0",
  "pandas>=2.0.0",
  "requests>=2.31.0",
  "beautifulsoup4>=4.12.0",
  "Pillow>=10.0.0",
]

[project.optional-dependencies]
playwright = ["playwright>=1.45.0"]
opencv = ["opencv-python>=4.8.0"]
dev = ["pytest>=8.0.0"]

[project.scripts]
dxm-link-builder = "dxm_link_builder.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
